mysql/mysql-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-network-policy
  namespace: default
spec:
  
##MatchLabel pode selector. Esse Match Label definine com base na label quais pods a NW Policy será aplicada
## Pegamos essa label na parte de template do deployment.
  podSelector:
    matchLabels:
      app: mariadb
  
## Aqui definimos as  politicas que seram aplicadas pela NW Policy
  policyTypes:
    - Ingress
    - Egress

#Aqui configuramos as politicas de entrada e saída
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: wordpress
    ports:
      - protocol: TCP
        port: 3306
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: wordpress
    ports:
      - protocol: TCP
        port: 3306
